[gd_scene load_steps=30 format=3 uid="uid://cj7vyh4w4hv07"]

[ext_resource type="Script" path="res://Scripts/UI/scene_change_buttons.gd" id="1_gkwqc"]
[ext_resource type="Texture2D" uid="uid://5lplwajuqksb" path="res://Assets/Sprites/UI/btn_Brew_0.png" id="2_as6if"]
[ext_resource type="Texture2D" uid="uid://be8dm5b2yu0m0" path="res://Assets/Sprites/UI/btn_Brew_1.png" id="3_j4lh1"]
[ext_resource type="Texture2D" uid="uid://bcsjdl6lhokra" path="res://Assets/Sprites/UI/btn_Mons_0.png" id="4_3ykkq"]
[ext_resource type="Texture2D" uid="uid://ckk1kbxksx0yv" path="res://Assets/Sprites/UI/btn_Mons_1.png" id="5_f35sv"]
[ext_resource type="ButtonGroup" uid="uid://1skcfijramt2" path="res://Styles/scenes_button_group.tres" id="5_n0l7k"]
[ext_resource type="Texture2D" uid="uid://ba1hiojhl0box" path="res://Assets/Sprites/UI/btn_Exam_3.png" id="6_sctl6"]
[ext_resource type="Texture2D" uid="uid://t3udr0swadd7" path="res://Assets/Sprites/UI/btn_Brew_3.png" id="8_dms7y"]
[ext_resource type="Texture2D" uid="uid://cvuklclh6nau4" path="res://Assets/Sprites/UI/btn_Grow_0.png" id="8_ka5h2"]
[ext_resource type="Texture2D" uid="uid://jx7y5swpvpui" path="res://Assets/Sprites/UI/btn_Grow_1.png" id="9_gaiva"]
[ext_resource type="Texture2D" uid="uid://bcvi1ryaqqjkk" path="res://Assets/Sprites/UI/btn_Expe_0.png" id="9_l6ro0"]
[ext_resource type="Texture2D" uid="uid://dkbc34yrei8rn" path="res://Assets/Sprites/UI/Notif_TL_1.png" id="9_m126e"]
[ext_resource type="Texture2D" uid="uid://bb4tuupk4qv5h" path="res://Assets/Sprites/UI/btn_Expe_1.png" id="10_wvulv"]
[ext_resource type="Texture2D" uid="uid://cl0q3oe0opra" path="res://Assets/Sprites/UI/btn_Grow_3.png" id="10_xxead"]
[ext_resource type="Texture2D" uid="uid://ctp36e4a4ioq4" path="res://Assets/Sprites/UI/btn_Script_3.png" id="13_qsyac"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8o4mv"]
texture = ExtResource("2_as6if")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tcclb"]
texture = ExtResource("3_j4lh1")
modulate_color = Color(0.74902, 0.74902, 0.74902, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oy2ev"]
texture = ExtResource("4_3ykkq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3pi7b"]
texture = ExtResource("6_sctl6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yq15j"]
texture = ExtResource("5_f35sv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5appu"]
texture = ExtResource("2_as6if")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4g6om"]
texture = ExtResource("8_dms7y")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qv2j2"]
texture = ExtResource("3_j4lh1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wf17x"]
texture = ExtResource("8_ka5h2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ulofl"]
texture = ExtResource("10_xxead")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_crfos"]
texture = ExtResource("9_gaiva")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fnk5c"]
texture = ExtResource("9_l6ro0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7s2a4"]
texture = ExtResource("13_qsyac")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4k4bs"]
texture = ExtResource("10_wvulv")

[node name="SceneButtons" type="Control"]
layout_mode = 3
anchor_right = 0.459
anchor_bottom = 0.174
offset_left = 1.0
offset_right = 1.23199
offset_bottom = 0.247993
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_gkwqc")
normal_button_style = SubResource("StyleBoxTexture_8o4mv")
active_button_style = SubResource("StyleBoxTexture_tcclb")

[node name="MonsterEnclosureButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.108
anchor_top = 0.442
anchor_right = 0.183
anchor_bottom = 0.796
offset_left = -0.132
offset_top = 0.0540009
offset_right = 0.192993
offset_bottom = 0.0519943
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_oy2ev")
theme_override_styles/hover = SubResource("StyleBoxTexture_3pi7b")
theme_override_styles/pressed = SubResource("StyleBoxTexture_yq15j")
toggle_mode = true
button_group = ExtResource("5_n0l7k")

[node name="AlchemyLabButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.189
anchor_top = 0.442
anchor_right = 0.265
anchor_bottom = 0.796
offset_left = 0.0189972
offset_top = 0.0540009
offset_right = -0.185013
offset_bottom = 0.0519943
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_5appu")
theme_override_styles/hover = SubResource("StyleBoxTexture_4g6om")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qv2j2")
toggle_mode = true
button_group = ExtResource("5_n0l7k")

[node name="InvAlert" type="TextureRect" parent="AlchemyLabButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.625
anchor_top = 0.75
anchor_right = 1.875
anchor_bottom = 2.0
offset_left = 1.14441e-05
offset_bottom = 1.52588e-05
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_m126e")

[node name="GardenButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.27
anchor_top = 0.442
anchor_right = 0.346
anchor_bottom = 0.796
offset_left = 0.169998
offset_top = 0.0540009
offset_right = -0.0340424
offset_bottom = 0.0519943
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_wf17x")
theme_override_styles/hover = SubResource("StyleBoxTexture_ulofl")
theme_override_styles/pressed = SubResource("StyleBoxTexture_crfos")
toggle_mode = true
button_group = ExtResource("5_n0l7k")

[node name="InvAlert" type="TextureRect" parent="GardenButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.75
anchor_right = 1.85
anchor_bottom = 2.0
offset_left = 3.43323e-05
offset_right = 5.34058e-05
offset_bottom = 1.52588e-05
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_m126e")

[node name="ExpeditionsButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.442
anchor_right = 0.425
anchor_bottom = 0.796
offset_left = -0.150009
offset_top = 0.0540009
offset_right = 0.174988
offset_bottom = 0.0519943
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_fnk5c")
theme_override_styles/hover = SubResource("StyleBoxTexture_7s2a4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4k4bs")
toggle_mode = true
button_group = ExtResource("5_n0l7k")

[node name="InvAlert" type="TextureRect" parent="ExpeditionsButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65
anchor_top = 0.725
anchor_right = 1.9
anchor_bottom = 1.975
offset_right = -2.28882e-05
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_m126e")

[connection signal="pressed" from="MonsterEnclosureButton" to="." method="_on_monster_enclosure_button_pressed"]
[connection signal="pressed" from="AlchemyLabButton" to="." method="_on_alchemy_lab_button_pressed"]
[connection signal="pressed" from="GardenButton" to="." method="_on_garden_button_pressed"]
[connection signal="pressed" from="ExpeditionsButton" to="." method="_on_expeditions_button_pressed"]
